--- a/_config.yml
+++ b/_config.yml
@@ -1,121 +1,37 @@
-# Where things are
-source:       .
-destination:  ./_site
-plugins:      ./_plugins
-layouts:      ./_layouts
-paginate:     8
+# Site settings
+title: Another Blog
+url: "http://laobubu.github.io"    # the protocol and hostname of your site, eg. `http://laobubu.github.io`
+baseurl: "/jekyll-theme-EasyBook" # the prefix of your site uri, eg. `/jekyll-theme-EasyBook` or just one slash `/`
+#timezone: Asia/Chongqing
+description: >
+  One or more sentences introducing this blog.
 
-# Handling Reading
-safe:         false
-include:      [".htaccess"]
-exclude:      []
-keep_files:   [".git", ".svn"]
-encoding:     "utf-8"
-markdown_ext: "markdown,mkdown,mkdn,mkd,md"
-textile_ext:  "textile"
+# Your information
+email: your_email@example.com
+author: your_name
+avatar: "//www.gravatar.com/avatar/your_email_md5?d=mm&s=135"
+profile: One sentence introducing yourself.
+#twitter_username: twitter_username
+#github_username:  github_username
 
-# Filtering Content
-show_drafts:  null
-limit_posts:  0
-future:       true
-unpublished:  false
+# Comment Service (Disqus or 多说)
+#  choose one and un-comment the line to active it
+#disqus_shortname: xxx   # get one: https://disqus.com/admin/signup/
+#duoshuo_shortname: xxx  # get one: http://duoshuo.com/create-site/
 
-# Conversion
-markdown:     kramdown
-highlighter:  pygments
-lsi:          false
-excerpt_separator: "\n\n"
+permalink: /archivers/:title
+gems:
+ - jekyll-paginate
+ - jekyll-gist
+ - jemoji
 
-# Serving
-detach:       false
-port:         4000
-host:         127.0.0.1
-baseurl:      "" # does not include hostname
+# Build settings
+paginate: 5
+paginate_path: "page:num"
 
-# Outputting
-permalink:     date
-paginate_path: /page:num
-timezone:      null
+highlighter: rouge
+markdown: kramdown
 
-
-#Site config
-title: KOE
-description: zrongl blog
-keywords: kind or evil
-# url: http://zrongl.com:4000
-url: http://zrongl.github.io
-feed: /atom.xml
-favicon: /images/favicon.jpg
-aboutImg: /images/about-img.jpg
-
-#Nav config
-nav:
-  - text: 首页
-    url: /index.html
-  - text: 分类目录 
-    url: /categories.html
-  - text: 文章归档
-    url: /archives.html
-  - text: 联系我
-    url: /contact.html
-  - text: 友情链接
-    url: /links.html
-
-#Author config
-author:
-    name: Zrongl
-    email: Z.rongl@gmail.com
-    imageLink: /images/header-img.jpg
-    simpleIntro: <strong>观善恶众相 品百味人生 <br />一花一世界 一叶一菩提</strong>
-    detailIntro: <p>他来自<strong>天津蓟县</strong>，毕业于<strong>华航</strong>，他没有其他博主的辉煌经历，他只是一个平凡的掉渣的程序员。</p><p>一本哥哥高中有关<strong>QBasic</strong>语言的计算机课本使他第一次解除了计算机语言，一本哥哥大学的<strong>C语言</strong>程序设计课本使他了解C语言，等到自己上了大学就自然而然的喜欢上了计算机编程，但他深刻的觉得中国教育会毁掉一个人的兴趣，因此在填写专业的时候他选择了<strong>电子信息工程</strong>。</p><p>本想从心理学中找到自己性格内向的原因，却在一次巧合的机会被<strong>哲学</strong>的魅力所折服，从此便一发不可收拾。在哲学中他学会了看待问题要从<strong>纯思</strong>的层次去思考，才能抓住问题的本质。</p><p>毕业后源于对考试的恐惧使他在面试上屡屡失败，致使他还曾有过扫大街的想法，后来有幸被<strong>京国艺</strong>录用，从事软件维护和开发，自此开始了自己的程序员之旅。</p><p>特立独行的他在面对自己的<strong>恋情</strong>的时候，显得格格不入，自此便不断地向<strong>现实</strong>妥协，生活开始使得他意识到借助哲学分析出问题的本质与现实相去甚远，而他又不得不向现实低头。从此也就<strong>没有</strong>太多的<strong>闲暇去过问哲学</strong>...</p><p>但是被现实所<strong>“压迫”</strong>的他，并没有失去对问题本质的追求，因此便有了建立自己博客的想法。</p><p>这是一个表达自己想法的平台，同时也记录着<strong>工作、学习和生活的点滴</strong>，缅怀也好纪念也罢，老话讲<strong>留个念想</strong>。</p>
-
-#Follow me, you can choose your icon by http://fortawesome.github.io/Font-Awesome/icons/#brand
-follow:
-  - class: icon-rss
-    url: /atom.xml
-  - class: icon-weibo
-    url: http://weibo.com/zrongl
-  - class: icon-renren
-    url: http://renren.com
-  - class: icon-github-alt
-    url: http://github.com/zrongl
-  - class: icon-twitter
-    url: http://twitter.com
-  - class: icon-google-plus
-    url: http://google.com
-
-#Links
-customLinks:
-  - item:
-    - text: Jekyll
-      url: http://jekyllrb.com
-    - text: Jekyll Theme
-      url: http://www.zhanxin.info/themes.html
-    message: Friends
-  - item:
-    - text: Font Awesome
-      url: http://fortawesome.github.io/Font-Awesome/
-    - text: Google Font
-      url: http://www.google.com/fonts/
-    - text: jQuery
-      url: http://jquery.com/
-    message: 其他相关链接
-
-#googleAnaly, your id link UA-12345678-X
-googleAnaly:
-  config: false
-  id: UA-40169250-1
-
-#baiduAnaly
-baiduAnaly:
- config: true
- id: dab5aaae7261f4808b77574694e1a842
-
-#comment config
-disqus:
-  config: false
-  id: piznblog
-
-duoshuo:
-  config: true
-  id: zrongl
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
