--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # Site settings
-title: Another Blog
+title: David Blog
 url: "http://davidtty.github.io"    # the protocol and hostname of your site, eg. `http://laobubu.github.io`
 baseurl: "" # the prefix of your site uri, eg. `/jekyll-theme-EasyBook` or just one slash `/`
 #timezone: Asia/Chongqing
 description: >
-  One or more sentences introducing this blog.
+  码农
 
 # Your information
-email: your_email@example.com
-author: your_name
+email: 364038615@QQ.com
+author: David
 avatar: "//www.gravatar.com/avatar/your_email_md5?d=mm&s=135"
-profile: One sentence introducing yourself.
+profile: 码农.
 #twitter_username: twitter_username
 #github_username:  github_username
 
@@ -23,7 +23,7 @@ permalink: /archivers/:title
 gems:
  - jekyll-paginate
  - jekyll-gist
-# - jemoji
+ - jemoji
 
 # Build settings
 paginate: 5
